package me.dio.domain.model;

import jakarta.persistence.Entity;

@Entity(name = "tb_category")
public class Category extends BookType {
    
}
