package me.dio.domain.model;

import jakarta.persistence.Entity;

@Entity(name = "tb_tag")
public class Tag extends BookType{

}
