classDiagram
    class Book {
        -Long id
        -String title
        -String edition
        -String author
        -String publicationDate
        -String postDate
        -String description
        -String imageUrl,
        -Category category
        -Tag[] tags
    }
    
    class Category {
        -Long id
        -String name
    }

    class Tag {
        -Long id
        -String name
    }

    Book "1" --* "1" Category : has
    Book "1..*" --> "0..*" Tag : has